tests/macros/input/choices.stderr
error: option `choices` does not exist for kind `input`
 --> $DIR/choices.rs:2:35
  |
2 |     requestty::questions![Input { choices: todo!() }];
  |                                   ^^^^^^^
