tests/macros/input/choices.rs
fn main() {
    requestty::questions![Input { choices: todo!() }];
}
